<resources>
    <string name="app_name">ToDo App</string>

    <!-- Splash Screen -->
    <string name="version_1_0_0">VERSION 1.0.0</string>

    <!-- Sign In Screen -->
    <string name="welcome_back">Welcome Back !</string>
    <string name="todo_app_subtitle">ToDo App…</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>

    <!-- Sign Up Screen -->
    <string name="create_account_subtitle">create an account and Join with us!</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already have an account?</string>

    <!-- To-Do List Screen -->
    <string name="settings">Settings</string>
    <string name="add_task">+ ADD TASK</string>
    <string name="todo_list">ToDo List</string>
    <string name="task">Task</string>
    <string name="task_name_placeholder">Task name</string>
    <string name="task_datetime_placeholder">30/03/2026 | 11:30 AM</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <!-- Add New Task Dialog -->
    <string name="add_new_task">ADD NEW TASK</string>
    <string name="calendar">Calendar</string>
    <string name="enter_task">Enter Task</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_time">Enter Time</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>

    <!-- Settings Screen -->
    <string name="my_profile">My Profile</string>
    <string name="dev_information">Dev Information</string>
    <string name="navigate">Navigate</string>

    <!-- My Profile Screen -->
    <string name="user_information">User Information</string>
    <string name="username_label">Username:</string>
    <string name="username_placeholder">Teshan</string>
    <string name="email_label">Email:</string>
    <string name="email_placeholder">teshan@gmail.com</string>
    <string name="edit_info">EDIT INFO</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="home">Home</string>
    <string name="profile_avatar">Profile Avatar</string>

    <!-- Dev Information Screen -->
    <string name="name_label">Name:</string>
    <string name="dev_name">P. D. T. Neranjaka</string>
    <string name="student_no_label">Student no:</string>
    <string name="student_number">2023T01882</string>
    <string name="personal_statement_label">Personal statement:</string>
    <string name="personal_statement">ICT undergraduate passionate about mobile application development and modern UI design.</string>
    <string name="release_version_label">Release version:</string>
    <string name="developer_avatar">Developer Avatar</string>
    <string name="exit">EXIT</string>

    <!-- Edit User Information Dialog -->
    <string name="edit_user_information">Edit User Informations</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email">Enter Email</string>
    <string name="update">UPDATE</string>

    <!-- Sign Out Confirmation -->
    <string name="confirm_sign_out">Are you sure you want to sign out?</string>
</resources>